// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/calculations/Calculation should match snapshot - count 1`] = `
<div>
  <div
    class="Calculation count fooClass  hovered"
    style="width: 100px;"
    tabindex="0"
  >
    <span
      class="calculationLabel"
    >
      Count
    </span>
    <span
      class="calculationValue"
    >
      2
    </span>
  </div>
</div>
`;

exports[`components/calculations/Calculation should match snapshot - countUniqueValue 1`] = `
<div>
  <div
    class="Calculation countUniqueValue fooClass  hovered"
    style="width: 100px;"
    tabindex="0"
  >
    <span
      class="calculationLabel"
    >
      Unique
    </span>
    <span
      class="calculationValue"
    >
      1
    </span>
  </div>
</div>
`;

exports[`components/calculations/Calculation should match snapshot - countValue 1`] = `
<div>
  <div
    class="Calculation countValue fooClass  hovered"
    style="width: 100px;"
    tabindex="0"
  >
    <span
      class="calculationLabel"
    >
      Values
    </span>
    <span
      class="calculationValue"
    >
      1
    </span>
  </div>
</div>
`;

exports[`components/calculations/Calculation should match snapshot - none 1`] = `
<div>
  <div
    class="Calculation none fooClass  hovered"
    style="width: 100px;"
    tabindex="0"
  >
    <span
      class="calculationLabel"
    >
      Calculate
    </span>
    <i
      class="CompassIcon icon-chevron-up ChevronUpIcon"
    />
  </div>
</div>
`;

exports[`components/calculations/Calculation should match snapshot - option change 1`] = `
<div>
  <div
    class="Calculation none fooClass menuOpen hovered"
    style="width: 100px;"
    tabindex="0"
  >
    <div>
      <div
        class="CalculationOptions css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="CalculationOptions__control css-1s59geg-Control"
        >
          <div
            class="CalculationOptions__value-container CalculationOptions__value-container--has-value css-1mxrbau-ValueContainer"
          >
            <div
              class="CalculationOptions__single-value css-1qlwihv-singleValue"
            >
              Calculate
            </div>
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              aria-readonly="true"
              class="css-mohuvp-dummyInput-DummyInput"
              id="react-select-2-input"
              inputmode="none"
              role="combobox"
              tabindex="0"
              value=""
            />
          </div>
          <div
            class="CalculationOptions__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="CalculationOptions__indicator CalculationOptions__clear-indicator css-tpaeio-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                />
              </svg>
            </div>
            <span
              class="CalculationOptions__indicator-separator css-43ykx9-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="CalculationOptions__indicator CalculationOptions__dropdown-indicator css-wpsttr-indicatorContainer"
            >
              <i
                class="CompassIcon icon-chevron-up ChevronUpIcon"
              />
            </div>
          </div>
        </div>
        <input
          name="calculation_options"
          type="hidden"
          value="none"
        />
      </div>
    </div>
    <span
      class="calculationLabel"
    >
      Calculate
    </span>
    <i
      class="CompassIcon icon-chevron-up ChevronUpIcon"
    />
  </div>
</div>
`;
